# CREWAI---AC

escolhe_cpu/: .env  README.md  cpu.md  pyproject.toml
escolhe_cpu/src/escolhe_cpu/: crew.py  main.py
escolhe_cpu/src/escolhe_cpu/config/: agents.yaml  tasks.yaml
escolhe_cpu/src/escolhe_cpu/tools/: custom_tool.py
