[project]
name = "escolhe_cpu"
version = "0.1.0"
description = "Escolhe_CPU using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
escolhe_cpu = "escolhe_cpu.main:run"
run_crew = "escolhe_cpu.main:run"
train = "escolhe_cpu.main:train"
replay = "escolhe_cpu.main:replay"
test = "escolhe_cpu.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "escolhe_cpu"
version = "0.0.1"
authors = ["Vinicius Castro <vinicius.castro@discente.ufg.br>"]
description = "Escolhe CPU"